--- a/index.html
+++ b/index.html
@@ -275,15 +275,15 @@
             <h2>Recomendados</h2>
             <div class="recomendados-grid">
                 <div class="recomendado-card">
-                    <img src="" alt="Com Cristo - Nunca mais eu pequei em paz">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/O%20Manual%20Para%20Quando%20Voc%C3%AA%20Duvida%20de%20Tudo%20%282%29-ubUvAzwwS08LVHkS9TzRwTyp8DlX86.png" alt="Com Cristo - Nunca mais eu pequei em paz">
                     <button onclick="window.open('https://pay.kiwify.com.br/sgbvDHC?afid=RlEHdYx0', '_blank')">saiba mais</button>
                 </div>
                 <div class="recomendado-card">
-                    <img src="" alt="O Manual Para Quando Você Duvida de Tudo">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/O%20Manual%20Para%20Quando%20Voc%C3%AA%20Duvida%20de%20Tudo-jzm5XbFxDgXhCfnCWFrOpIktLNB6y0.png" alt="O Manual Para Quando Você Duvida de Tudo">
                     <button onclick="window.open('https://pay.kiwify.com.br/3sF5KsC', '_blank')">saiba mais</button>
                 </div>
                 <div class="recomendado-card">
-                    <img src="" alt="Pare de fingir que está tudo bem com Deus">
+                    <img src="https://hebbkx1anhila5yf.public.blob.vercel-storage.com/O%20Manual%20Para%20Quando%20Voc%C3%AA%20Duvida%20de%20Tudo%20%281%29-W4PNi6rDfuVYAjJR8fHFN10ctKsQHv.png" alt="Pare de fingir que está tudo bem com Deus">
                     <button onclick="window.open('https://pay.kiwify.com.br/RXDp6IL', '_blank')">saiba mais</button>
                 </div>
             </div>
